:iphone: Bug Fix: Grid display on smaller screens

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -899,12 +899,6 @@ video {
 
 @media (min-width: 640px) {
   .user-input-tile {
-    padding: 0.75rem;
-  }
-}
-
-@media (min-width: 768px) {
-  .user-input-tile {
     padding: 1.25rem;
   }
 }
